--- a/js30-1.20-audio-player/asserts/css/styles.css
+++ b/js30-1.20-audio-player/asserts/css/styles.css
@@ -143,12 +143,12 @@ svg {
   width: 100%;
   height: 2px;
   position: relative;
-  background: #dbf2db;
+  background: white;
   border-radius: 12px;
   overflow: hidden;
 }
 .progress-current {
-  background: #ff874a;
+  background-color: #ff874a;
   border-radius: 12px;
   position: absolute;
   top: 0;
