--- a/js30-1.20-audio-player/asserts/css/styles.css
+++ b/js30-1.20-audio-player/asserts/css/styles.css
@@ -1,10 +1,10 @@
 body {
-  background: #111010;
-  font-family: "Ubuntu", sans-serif;
+  background: #b8a9a9;
+  font-family: "Roboto";
   overflow-x: hidden;
 }
 
-.root {
+.base {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -14,7 +14,7 @@ body {
 }
 
 .app {
-  background: linear-gradient(180deg, #6192c4 0%, #07386b 100%);
+  background: purple;
   border-radius: 12px;
   padding: 24px 25px;
   margin-top: 34px;
@@ -43,7 +43,6 @@ svg {
 
 .current {
   display: flex;
-  -moz-column-gap: 12px;
        column-gap: 12px;
 }
 .current-image {
@@ -115,7 +114,6 @@ svg {
   display: flex;
   align-items: center;
   justify-content: center;
-  -moz-column-gap: 45px;
        column-gap: 45px;
 }
 .controls-button {
@@ -139,22 +137,9 @@ svg {
   margin-top: 18px;
 }
 
-.progress {
-  width: 100%;
-  height: 2px;
-  position: relative;
-  background: white;
-  border-radius: 12px;
-  overflow: hidden;
-}
-.progress-current {
-  background-color: #ff874a;
-  border-radius: 12px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-}
+
+
+
 
 .timeline {
   margin-top: 4px;
@@ -185,12 +170,9 @@ svg {
 
 .item {
   display: grid;
-  grid-template-columns: 48px 3fr 2fr 2fr auto;
+  grid-template-columns: 45px 3fr 2fr 2fr auto;
   align-items: center;
   position: relative;
-}
-.item:hover svg {
-  transform: rotate(360deg);
 }
 .item:before {
   content: "";
@@ -286,10 +268,53 @@ svg {
   position: absolute;
   left: 0;
   top: 100%;
-  background: #ff874a;
+  background: rgb(160, 86, 160);
   padding: 15px;
   border-radius: 6px;
 }
 .volume input {
   cursor: pointer;
-}/*# sourceMappingURL=styles.css.map */
+}
+
+.progress input{
+  cursor: pointer;
+}
+
+/* .controls-volume{
+  background: #b8a9a9;
+} */
+
+.controls-volume{
+  appearance: none;
+  height: 8px; 
+  background-color: rgb(226, 216, 216); 
+  border-radius: 7px;
+}
+
+.controls-volume::-webkit-slider-thumb {
+  appearance: none;
+  width: 19px; 
+  height: 19px; 
+  background-color: black; 
+  border: 2px solid white; 
+  border-radius: 50%; 
+}
+
+.progress-current {
+  appearance: none;
+  width: 100%;
+  height: 3px;
+  background: white;
+  border-radius: 12px;
+  
+}
+
+.progress-current::-webkit-slider-thumb{
+  appearance: none;
+  width: 15px;
+  height: 10px;
+  background-color: green;
+  border-radius: 4px;
+
+}
+
